# Struktury_Danych_1

./: Badanie.cpp  Badanie.hpp  Badanie_configconst.xlsx  Badanie_opracowanie.xlsx  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  ListaJednokierunkowa.cpp  ListaJednokierunkowa.hpp  README.md  TablicaDynamiczna.cpp  TablicaDynamiczna.hpp  TabliceGenerator.cpp  TabliceGenerator.hpp  Wezel.hpp  main.cpp
